[package]
name = "funix"
version = "1.0.0"
edition = "2015"
authors = ["jewlexx"]
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.14.1", features = ["https"], default-features = false }
directories = { version = "4.0.1" }
spinners = { version = "3.0.1" }