[package]
name = "funix"
version = "1.0.1"
edition = "2015"
authors = ["jewlexx"]
readme = "README.md"
license = "MIT"
keywords = ["cli", "tool", "flutter"]
repository = "https://github.com/jewlexx/funix"
categories = ["command-line-utilities", "development-tools"]
description = "A command to install the Flutter sdk"
rust-version = "1.56.0"
documentation = "https://docs.rs/funix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.14.1", features = ["https"], default-features = false }
directories = "4.0.1"
spinners = "3.1.0"